--- a/application/views/scripts/beneficio/idoso.phtml
+++ b/application/views/scripts/beneficio/idoso.phtml
@@ -6,106 +6,118 @@
 
 <body>
 
-<div class="container fundo">
+    <div class="container fundo">
 
-	  <div class="table-responsive" style="background-color:rgba(0,0,0,0.5); color: white">
-							<table class="table table-bordered text-center" style="background-color:rgba(0,0,0,0.5); color: white">
-								<tr class="text-primary">
-									<th class="fundoTransparente" colspan="4" style="background-color:rgba(0,0,0,0.5); color: white">
-										<center><h3>Novas Solicitações de Benefícios</h3></center>
-									</th>
-								</tr>
-								<tr>
-									<th class="fundoTransparente" colspan="1" style="background-color:rgba(0,0,0,0.5); color: white"><center>CPF</center></th>
-									<th class="fundoTransparente" colspan="1" style="background-color:rgba(0,0,0,0.5); color: white"><center>Nome</center></th>
-									<th class="fundoTransparente" colspan="1" style="background-color:rgba(0,0,0,0.5); color: white"> <center>Data de Solicitação</center></th>
-									<th class="fundoTransparente" colspan="1" style="background-color:rgba(0,0,0,0.5); color: white"><center>Situação</center></th>
-								</tr>
-								<tr>
-								<? foreach ($this->listarBeneficios as $solicitacaobeneficio): ?>
-			                        <tr>
-			                            <td> <?= $solicitacaobeneficio['cpf'] ?></td>		                        
-			                            <td> <?= $solicitacaobeneficio['nome'] ?></td>
-			                            <td> <?= $solicitacaobeneficio['data_solicitacao'] ?></td>
-			                            <td> <?= $solicitacaobeneficio['idf_situacao_solicitacao'] ?>
-			                            	<button class="btn" data-toggle="modal" data-target="#modal-mensagem"> 
-											<i class="fas fa-edit" style="color:black"></i>
-										</button>
-			                            </td>
-			                        </tr>
-		                    	<? endforeach; ?>
-								</tr>
+        <div class="table-responsive" style="background-color:rgba(0,0,0,0.5); color: white">
+            <table class="table table-bordered text-center" style="background-color:rgba(0,0,0,0.5); color: white">
+                <tr class="text-primary">
+                    <th class="fundoTransparente" colspan="4" style="background-color:rgba(0,0,0,0.5); color: white">
+                <center><h3>Novas Solicitações de Benefícios</h3></center>
+                </th>
+                </tr>
+                <tr>
+                    <th class="fundoTransparente" colspan="1" style="background-color:rgba(0,0,0,0.5); color: white"><center>CPF</center></th>
+                <th class="fundoTransparente" colspan="1" style="background-color:rgba(0,0,0,0.5); color: white"><center>Nome</center></th>
+                <th class="fundoTransparente" colspan="1" style="background-color:rgba(0,0,0,0.5); color: white"> <center>Data de Solicitação</center></th>
+                <th class="fundoTransparente" colspan="1" style="background-color:rgba(0,0,0,0.5); color: white"><center>Situação</center></th>
+                </tr>
+                <tr>
+                    <? foreach ($this->listarBeneficios as $solicitacaobeneficio): ?>
+                    <tr>
+                        <td> <?= $solicitacaobeneficio['cpf'] ?></td>		                        
+                        <td> <?= $solicitacaobeneficio['nome'] ?></td>
+                        <td> <?= $solicitacaobeneficio['data_solicitacao'] ?></td>
+                        <td> <?= $solicitacaobeneficio['idf_situacao_solicitacao'] ?>
+                            <button class="btn" data-toggle="modal" data-target="#modal-mensagem"> 
+                                <i class="fas fa-edit" style="color:black"></i>
+                            </button>
+                        </td>
+                    </tr>
+                <? endforeach; ?>
+                </tr>
 
-							</table>
-	  
-</div>
-	<!-- Modal -->
-<div class="modal fade" id="modal-mensagem" tabindex="-1" role="dialog">
-    <div class="modal-dialog modal-lg" role="document">
-         <div class="modal-content">
-             <div class="modal-header">
-			     <h4 class="modal-title">PESSOA IDOSA</h4>
-                 <button type="button" class="close" data-dismiss="modal">
-					<span>&times;</span>
-				 </button>
-             </div>
-             <div class="modal-body">
-				<div class="container-fluid"> 
-					<div class="row">
-						<div class="table-responsive">
-							<form method="post">
-							  <div class="form-group">
-							  	<div class="col-sm-6">
-									<label >Nome completo:</label>
-									<input type="text" class="form-control" name="nomeCompleto" id="nomeCompleto">
-									<label >Data de nascimento:</label>
-									<input type="date" class="form-control" name="dataNascimento" id="dataNascimento">
-									<label >CPF:</label>
-									<input type="text" class="form-control" name="cpf" id="cpf">
-									<label >RG:</label>
-									<input type="text" class="form-control" name="rg" id="rg">
-									<label> Celular: </label>
-									<input type="text" class="form-control" name="celular" id="celular">
-								</div>
-								<div class="col-sm-6">
-									<label> Rua: </label>
-									<input type="text" class="form-control" name="rua" id="rua">
-									<label> Nº: </label>
-									<input type="text" class="form-control" name="numeroCasa" id="numeroCasa">									
-									<label> Bairro: </label>
-									<input type="text" class="form-control" name="bairro" id="bairro">									
-									<label >Carteira do Idoso:</label>
-									<br>
-									<button class="btn" id="carteiraIdoso" name="carteiraIdoso">
-										<i class="fa fa-download" style="color:black"></i>
-										<label style="color:black">
-											<a style="color:black" href="autorizaconcessao/autorizacao.pdf"
-											download="a">Download </a>
-										</label>
-									</button>
-									<br>
-									<label >Comprovante de Residência:</label>
-									<br>
-									<button class="btn" name="comprovanteResidencia" id="comprovanteResidencia">
-										<i class="fa fa-download" style="color:black"></i>
-										<label style="color:black">
-											<a style="color:black" href="autorizaconcessao/autorizacao.pdf"
-											download="a">Download </a>
-										</label>
-									</button>
-								</div>
-							  </div>
-							  <button type="submit" name="botaoConceder" id="botaoConceder" class="btn btn-success">Conceder</button>
-							  <button type="submit" class="btn btn-danger">Não Conceder</button>							
-							</form>							
-						</div>
-		 			</div>
-				</div>			 
-             </div>
+            </table>
 
-         </div>
-    </div>
- </div>
+        </div>
+        <!-- Modal -->
+        <div class="modal fade" id="modal-mensagem" tabindex="-1" role="dialog">
+            <div class="modal-dialog modal-lg" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h4 class="modal-title">PESSOA IDOSA</h4>
+                        <button type="button" class="close" data-dismiss="modal">
+                            <span>&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="container-fluid"> 
+                            <div class="row">
+                                <div class="table-responsive">
+                                    <form method="post">
+                                        <div class="form-group">
+                                            <div class="col-sm-6">
+                                                <label >Nome completo:</label>
+                                                <input type="text" class="form-control" name="nomeCompleto" id="nomeCompleto">
+                                                <label >Data de nascimento:</label>
+                                                <input type="date" class="form-control" name="dataNascimento" id="dataNascimento">
+                                                <label >CPF:</label>
+                                                <input type="text" class="form-control" name="cpf" id="cpf">
+                                                <label >RG:</label>
+                                                <input type="text" class="form-control" name="rg" id="rg">
+                                                <label> Celular: </label>
+                                                <input type="text" class="form-control" name="celular" id="celular">
+<br><label>Conceder Benefício</label>
+<button class="btn-group btn-group-toggle" data-toggle="buttons">
+                                                    <label class="btn btn-outline-primary">
+                                                        <input type="radio" name="options" id="option2" autocomplete="off"> Meia-Passagem
+                                                    </label>
+                                                    <label class="btn btn-outline-primary">
+                                                        <input type="radio" name="options" id="option3" autocomplete="off"> Isenção
+                                                    </label>
+
+                                                </button>
+<button type="submit" name="botaoConceder" id="botaoConceder" class="btn btn-success">Conceder</button>
+                                        <button type="submit" class="btn btn-danger">Não Conceder</button>			
+                                            </div>
+                                            <div class="col-sm-6">
+                                                <label> Rua: </label>
+                                                <input type="text" class="form-control" name="rua" id="rua">
+                                                <label> Nº: </label>
+                                                <input type="text" class="form-control" name="numeroCasa" id="numeroCasa">									
+                                                <label> Bairro: </label>
+                                                <input type="text" class="form-control" name="bairro" id="bairro">									
+                                                <label >Carteira do Idoso:</label>
+                                                <br>
+                                                <button class="btn" id="carteiraIdoso" name="carteiraIdoso">
+                                                    <i class="fa fa-download" style="color:black"></i>
+                                                    <label style="color:black">
+                                                        <a style="color:black" href="autorizaconcessao/autorizacao.pdf"
+                                                           download="a">Download </a>
+                                                    </label>
+                                                </button>
+                                                <br>
+                                                <label >Comprovante de Residência:</label>
+                                                <br>
+                                                <button class="btn" name="comprovanteResidencia" id="comprovanteResidencia">
+                                                    <i class="fa fa-download" style="color:black"></i>
+                                                    <label style="color:black">
+                                                        <a style="color:black" href="autorizaconcessao/autorizacao.pdf"
+                                                           download="a">Download </a>
+                                                    </label>
+                                                </button>
+                                                
+                                            </div>
+                                        </div>
+                                        				
+                                    </form>							
+                                </div>
+                            </div>
+                        </div>			 
+                    </div>
+
+                </div>
+            </div>
+        </div>
 
 
 </body>
